# Back/docs/swagger.yaml
@@ -213,15 +213,6 @@ definitions:
       name:
         type: string
     type: object
-  services.SubmitRatingRequest:
-    properties:
-      comment:
-        type: string
-      meal_id:
-        type: integer
-      rating:
-        type: integer
-    type: object
   types.DayFoodData:
     properties:
       breakfast:
@@ -252,6 +243,8 @@ definitions:
     type: object
   types.MealData:
     properties:
+      commented:
+        type: boolean
       description:
         type: string
       id:
@@ -266,6 +259,15 @@ definitions:
         type: string
       rating:
         type: number
+    type: object
+  types.SubmitRatingRequest:
+    properties:
+      comment:
+        type: string
+      mealId:
+        type: integer
+      rating:
+        type: integer
     type: object
   utils.APIResponse:
     properties:
@@ -653,7 +655,7 @@ paths:
         name: data
         required: true
         schema:
-          $ref: '#/definitions/services.SubmitRatingRequest'
+          $ref: '#/definitions/types.SubmitRatingRequest'
       produces:
       - application/json
       responses:
@@ -698,19 +700,14 @@ paths:
       tags:
       - food
     post:
-      consumes:
-      - application/json
-      description: Accepts JSON data containing week meals and sends it to the parser
-        service
+      description: Fetches weekly food data from an external API and sends it to the
+        parser service
       parameters:
-      - description: Weekly food data JSON
-        in: body
-        name: data
+      - description: Admin authentication token
+        in: header
+        name: X-Admin-Token
         required: true
-        schema:
-          $ref: '#/definitions/types.FoodData'
-      produces:
-      - application/json
+        type: string
       responses:
         "200":
           description: OK
